--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>To Do List</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 		<form name="toDoList">
 			<input type="text" name="ListItem" id="input"/>
 		</form>
-    
+
 		<div onclick="newItem()" id="button">Add</div>
 		<br/>
 		<ol id="list"></ol>
@@ -28,6 +29,6 @@
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
   integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
   crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+  <script src="js/scripts.js"></script>
   </body>
 </html>
